fix: Break content in cells if they are too wide

--- a/style.less
+++ b/style.less
@@ -64,6 +64,13 @@ div.dokuwiki {
             overflow-x: hidden;
         }
 
+        td, th {
+            word-wrap: break-word;
+            -webkit-hyphens: auto;
+            -ms-hyphens: auto;
+            hyphens: auto;
+        }
+
         table.flexiblewidth {
             min-width: unset;
             width: unset;
